# elite-dangerous-local-ai-tie-in-mcp

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  FIX_INSTRUCTIONS.md  INTEGRATION_TEST_ANALYSIS.md  MILESTONE_10_STATUS.md  MILESTONE_1_STATUS.md  MILESTONE_2_STATUS.md  MILESTONE_3_STATUS.md  MILESTONE_8_STATUS.md  MILESTONE_9_STATUS.md  MILESTONE_CURRENT_STATUS.md  README.md  SESSION_COMPLETION_REPORT.md  UPDATE_PR_5.md  analyze_gaps.py  apply_all_fixes.py  apply_mcp_prompts_fixes.py  compare_event_coverage.py  final_fix_mcp_prompts.py  fix_mcp_prompts.py  fix_mcp_prompts.sh  gap_analysis_simple.py  issue_template.md  pyproject.toml  requirements.txt  run_fix_and_commit.py  tmp_readme_prev.md
.claude/: settings.local.json
ai-directives/: README.md  code_quality_lessons.md  edcopilot-format-analysis.md  issue_investigation_workflow.md  project_implementation_plan.md
ai-directives/session-reports/: 2025-09-11_test_fixes.md  milestone-4-knowledge-preservation.md  session-2025-01-08-23-15.md  session-2025-09-06-20-05.md  session-2025-09-06-22-20.md  session-2025-09-07-15-52.md  session-2025-09-07-20-24.md  session-2025-09-08-14-30.md  session-2025-09-08-14-45.md  session-2025-09-08-15-57.md  session-2025-09-08-19-22.md  session-2025-09-08-19-30.md  session-2025-09-09-00-09.md  session-2025-09-09-04-30.md  session-2025-09-10-19-00.md  session-2025-09-13-documentation-update.md  session-2025-09-18-headless-cli-plan-and-parser-detour.md  session-2025-09-18_12-33-end-of-session.md  session-2025-10-05-issue-15.md
docs/: API_REFERENCE.md  CHATGPT_CODEX_INTEGRATION.md  EDCOPILOT_FORMAT_ISSUES.md  FEATURES_GUIDE.md  HEADLESS_CLI.md  IMPLEMENTATION_PLAN_ISSUE_20.md  INTEGRATION_TEST_ANALYSIS.md  JOURNAL_EVENTS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  TESTING_GUIDE.md  THEME_SYSTEM_GUIDE.md  TOKEN_USAGE_ANALYSIS.md  edcopilot-chatter-grammar.md
docs/milestones/: MILESTONE_10_COMPLETE.md  MILESTONE_10_STATUS.md  MILESTONE_11_5_PLANNED.md  MILESTONE_11_COMPLETE.md  MILESTONE_16_HEADLESS_EDCOPILOT_CLI.md  MILESTONE_1_STATUS.md  MILESTONE_3_STATUS.md  MILESTONE_4_STATUS.md  MILESTONE_8_STATUS.md  MILESTONE_9_STATUS.md  MILESTONE_CURRENT_STATUS.md
edcopilot_themes/: current_theme.json  ship_configurations.json  theme_history.json  theme_presets.json
gap-reports/: README.md  gap_report_detailed_analysis.md  gap_report_event_type_coverage.md  gap_report_mining_events_analysis.md  gap_report_unmapped_events.md
scripts/: README.md  audit_ai_directives.ps1  check_dependencies.py  generate_edcopilot.py  run_tests.py  setup_dependencies.py  test_issue_18.py  test_issue_23.py  test_milestone_10.py  test_milestone_8.py  test_milestone_9.py  test_sendtext.py
src/: __init__.py  server.py
src/edcopilot/: __init__.py  generator.py  templates.py  theme_generator.py  theme_mcp_tools.py  theme_storage.py
src/elite_mcp/: __init__.py  mcp_prompts.py  mcp_resources.py  mcp_tools.py
src/journal/: __init__.py  events.py  monitor.py  parser.py
src/mcp/: __init__.py  mcp_prompts.py  mcp_prompts_fix.patch  mcp_resources.py  mcp_tools.py
src/utils/: __init__.py  config.py  data_store.py  (+1 more)
tests/: __init__.py  test_config_basic.py  test_journal_parser.py
(+40 files in other folders)
